Avoid calling deprecated URL APIs