@@ -1,6 +1,7 @@
 package ai.wanaku.cli.main.converter;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import picocli.CommandLine;
 
@@ -15,7 +16,7 @@ public class URLConverter implements CommandLine.ITypeConverter<URL> {
     @Override
     public URL convert(String value) throws Exception {
         try {
-            return new URL(value);
+            return URI.create(value).toURL();
         } catch (Exception e) {
             // so it's not an URL, maybe a local path?
         }
